--- a/css/main.css
+++ b/css/main.css
@@ -71,28 +71,40 @@ body {
 .phone {
   position: relative; }
   @media only screen and (max-width: 319px) {
-    .phone p {
+    .phone a {
       font-size: 1.2rem;
       margin-left: 80px;
-      line-height: 1.1rem; } }
+      line-height: 1.3rem; 
+      text-decoration: none;
+      display: block;
+      margin-top: 5px;
+      color: #222; } }
   @media only screen and (min-width: 320px) {
-    .phone p {
-      font-size: 1.2rem;
+    .phone a {
+      font-size: 1rem;
       margin-left: 50px;
-      line-height: 1.1rem; } }
+      line-height: 1.7rem;
+      text-decoration: none;
+      display: block;
+      margin-top: 5px;
+      color: #222; } }
   @media only screen and (min-width: 480px) {
-    .phone p {
+    .phone a {
       font-size: 1.5rem;
-      margin-left: 0px; } }
+      margin-left: 0px;
+      line-height: 2rem; } }
   @media only screen and (min-width: 768px) {
-    .phone p {
-      font-size: 2rem; } }
+    .phone a {
+      font-size: 2rem;
+      line-height: 2.5rem; } }
   @media only screen and (min-width: 992px) {
-    .phone p {
+    .phone a {
       font-size: 1.6rem; } }
   @media only screen and (min-width: 1200px) {
-    .phone p {
-      font-size: 2rem; } }
+    .phone a {
+      font-size: 2rem;
+      text-decoration: none;
+      line-height: 3rem; } }
   .phone .icon-tel {
     position: absolute; }
     @media only screen and (max-width: 319px) {
@@ -104,19 +116,19 @@ body {
     @media only screen and (min-width: 320px) {
       .phone .icon-tel {
         left: 40px;
-        bottom: 36px;
+        bottom: 22px;
         width: 1.5rem;
         height: 1.5rem; } }
     @media only screen and (min-width: 480px) {
       .phone .icon-tel {
         left: -5px;
-        bottom: 40px;
+        bottom: 28px;
         width: 1.5rem;
         height: 1.5rem; } }
     @media only screen and (min-width: 768px) {
       .phone .icon-tel {
         left: -21px;
-        bottom: 50px;
+        bottom: 35px;
         width: 2rem;
         height: 2rem; } }
     @media only screen and (min-width: 992px) {
@@ -124,11 +136,11 @@ body {
         width: 1.5rem;
         height: 1.5rem;
         left: -5px;
-        bottom: 42px; } }
+        bottom: 35px; } }
     @media only screen and (min-width: 1200px) {
       .phone .icon-tel {
         left: -21px;
-        bottom: 48px;
+        bottom: 41px;
         width: 2rem;
         height: 2rem; } }
 
